--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <section id="contact" data-aos="fade-up">
     <h2>Hubungi Kami</h2>
     <p>Ingin konsultasi atau langsung order? Klik tombol di bawah untuk terhubung via WhatsApp:</p>
-    <a href="https://wa.me/628133889852" class="whatsapp-button" target="_blank">Chat via WhatsApp</a>
+    <a href="https://wa.me/62XXXXXXXXXXX" class="whatsapp-button" target="_blank">Chat via WhatsApp</a>
   </section>
 
   <footer data-aos="fade-up">
