--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <section id="about" data-aos="fade-up">
     <h2>Tentang Kami</h2>
     <p>Kitanation 3D adalah layanan cetak 3D profesional yang menghadirkan solusi kreatif dan presisi tinggi untuk kebutuhan personal maupun bisnis Anda. Kami menggunakan printer Ender-3 V3 SE untuk menghasilkan kualitas cetak terbaik.</p>
+    <img src="/Image/Logo-K3D.jpg" alt="">
   </section>
 
   <section id="services" data-aos="fade-up">
