--- a/index.html
+++ b/index.html
@@ -2,227 +2,86 @@
 <html lang="id">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kitanation 3D</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-  <link rel="icon" href="Image/Kitanation-Logo-Black.png" type="image/png">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #111;
-      color: white;
-      transition: background 0.3s, color 0.3s;
-    }
-
-    header {
-      background: #000;
-      padding: 40px 20px;
-      text-align: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    nav {
-      background: #1c1c1c;
-      padding: 10px;
-      text-align: center;
-      position: sticky;
-      top: 80px;
-      z-index: 999;
-    }
-
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      color: #ffc400;
-    }
-
-    section {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    footer {
-      background: #000;
-      text-align: center;
-      padding: 20px;
-    }
-
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-    }
-
-    .gallery img {
-      width: 100%;
-      max-width: 300px;
-      border-radius: 12px;
-      transition: transform 0.3s ease;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
-
-    .whatsapp-button {
-      display: inline-block;
-      background-color: #ffc400;
-      color: white;
-      padding: 15px 25px;
-      border-radius: 5px;
-      font-size: 16px;
-      text-decoration: none;
-      animation: pulse 2s infinite;
-    }
-
-    @keyframes pulse {
-      0% {
-        transform: scale(1);
-      }
-
-      50% {
-        transform: scale(1.05);
-      }
-
-      100% {
-        transform: scale(1);
-      }
-    }
-
-    .dark-mode {
-      background: #fff;
-      color: #111;
-    }
-
-    .dark-mode header,
-    .dark-mode nav,
-    .dark-mode footer {
-      background: #f4f4f4;
-      color: #111;
-    }
-
-    .theme-toggle {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      padding: 10px;
-      background: #ffc400;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      color: white;
-      z-index: 1001;
-    }
-
-    .logo-header {
-      max-width: 200px;
-      max-height: 100px;
-      height: auto;
-      width: auto;
-    }
-
-    .full-width {
-      width: 100%;
-      max-width: 100%;
-      margin: 0;
-      padding: 0;
-      background: #fff;
-    }
-
-    .full-width>div {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
-      padding: 60px 20px;
-      box-sizing: border-box;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kitanation 3D</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="icon" href="Image/Kitanation-Logo-Black.png" type="image/png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-  <!-- <button class="theme-toggle" onclick="toggleTheme()">🌓</button> -->
+    <!-- <button class="theme-toggle" onclick="toggleTheme()">🌓</button> -->
 
-  <header data-aos="fade-down">
-    <img src="Image\Kitanation-Logo-3D.png" alt="Logo Kitanation 3D" class="logo-header">
-    <p>Make Your Own Rotation</p>
-    <nav class="navmenu navbar-expand-sm" style="background-color: black;" data-bs-theme="dark">
-      <a href="#Home">Home</a>
-      <a href="#OurMachine">Our Machine</a>
-      <a href="#Gallery">Gallery</a>
-      <a href="#FindUs">Find Us</a>
-    </nav>
-  </header>
+    <header data-aos="fade-down">
+        <img src="Image\Kitanation-Logo-3D.png" alt="Logo Kitanation 3D" class="logo-header">
+        <p>Make Your Own Rotation</p>
+        <nav class="navmenu navbar-expand-sm" style="background-color: black;" data-bs-theme="dark">
+            <a href="#Home">Home</a>
+            <a href="#OurMachine">Our Machine</a>
+            <a href="#Gallery">Gallery</a>
+            <a href="#FindUs">Find Us</a>
+        </nav>
+    </header>
 
-  <section id="Home" data-aos="fade-up">
-    <h2>KITANATION 3D</h2>
-    <p>Kitanation 3D adalah layanan cetak 3D profesional yang menghadirkan solusi kreatif dan presisi tinggi untuk
-      kebutuhan personal maupun bisnis Anda. Kami menggunakan printer Ender-3 V3 SE untuk menghasilkan kualitas cetak
-      terbaik.</p>
-    <h2>Our Service</h2>
-    <ul>
-      <li>Miniatur & Figur Custom</li>
-      <li>Aksesoris & Dekorasi Unik</li>
-      <li>Prototyping & Mockup Produk</li>
-      <li>Layanan Cetak Desain 3D Anda</li>
-    </ul>
-  </section>
+    <section id="Home" data-aos="fade-up">
+        <h2>KITANATION 3D</h2>
+        <p>Kitanation 3D adalah layanan cetak 3D profesional yang menghadirkan solusi kreatif dan presisi tinggi untuk
+            kebutuhan personal maupun bisnis Anda. Kami menggunakan printer Ender-3 V3 SE untuk menghasilkan kualitas
+            cetak
+            terbaik.</p>
+        <h2>Our Service</h2>
+        <ul>
+            <li>Miniatur & Figur Custom</li>
+            <li>Aksesoris & Dekorasi Unik</li>
+            <li>Prototyping & Mockup Produk</li>
+            <li>Layanan Cetak Desain 3D Anda</li>
+        </ul>
+    </section>
 
-  <section id="OurMachine" class="full-width" data-aos="fade-up">
-    <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center;">
+    <section id="OurMachine" class="full-width" data-aos="fade-up">
+        <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center;">
 
-      <div style="flex: 1; min-width: 300px; padding: 40px; box-sizing: border-box; text-align: center;">
-        <h2 style="color: #111; margin-bottom: 10px;">Our Machine</h2>
-        <p style="color: #444; font-size: 16px;">Under maintenance</p>
-      </div>
+            <div style="flex: 1; min-width: 300px; padding: 40px; box-sizing: border-box; text-align: center;">
+                <h2 style="color: #111; margin-bottom: 10px;">Our Machine</h2>
+                <p style="color: #444; font-size: 16px;">Under maintenance</p>
+            </div>
 
-      <div style="flex: 1; min-width: 300px; text-align: center;">
-        <img src="Image/Kitanation-Machine.png" alt="Mesin 3D Printer"
-          style="width: 100%; max-width: 600px; height: auto;">
-      </div>
+            <div style="flex: 1; min-width: 300px; text-align: center;">
+                <img src="Image/Kitanation-Machine.png" alt="Mesin 3D Printer"
+                    style="width: 100%; max-width: 600px; height: auto;">
+            </div>
 
-    </div>
-  </section>
+        </div>
+    </section>
 
-  <section id="Gallery" data-aos="fade-up">
-    <h2>Galeri Hasil Cetak</h2>
-    <div class="gallery">
-      <img src="Image\TP_Gantungan2_1.jpg" alt="Hasil Cetak 1">
-      <img src="Image\TP_Gantungan2_2.jpg" alt="Hasil Cetak 2">
-      <img src="Image\TP_Gantungan2_3.jpg" alt="Hasil Cetak 3">
-    </div>
-  </section>
+    <section id="Gallery" data-aos="fade-up">
+        <h2>Galeri Hasil Cetak</h2>
+        <div class="gallery">
+            <img src="Image\TP_Gantungan2_1.jpg" alt="Hasil Cetak 1">
+            <img src="Image\TP_Gantungan2_2.jpg" alt="Hasil Cetak 2">
+            <img src="Image\TP_Gantungan2_3.jpg" alt="Hasil Cetak 3">
+        </div>
+    </section>
 
-  <section id="FindUs" data-aos="fade-up">
-    <h2>Hubungi Kami</h2>
-    <p>Ingin konsultasi atau langsung order? Klik tombol di bawah untuk terhubung via WhatsApp:</p>
-    <a href="https://wa.me/628133889852" class="whatsapp-button" target="_blank">Chat via WhatsApp</a>
-  </section>
+    <section id="FindUs" data-aos="fade-up">
+        <h2>Hubungi Kami</h2>
+        <p>Ingin konsultasi atau langsung order? Klik tombol di bawah untuk terhubung via WhatsApp:</p>
+        <a href="https://wa.me/628133889852" class="whatsapp-button" target="_blank">Chat via WhatsApp</a>
+    </section>
 
-  <footer data-aos="fade-up">
-    <p>&copy; 2025 Kitanation 3D. All rights reserved.</p>
-  </footer>
+    <footer data-aos="fade-up">
+        <p>&copy; 2025 Kitanation 3D. All rights reserved.</p>
+    </footer>
 
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-    function toggleTheme() {
-      document.body.classList.toggle("dark-mode");
-    }
-  </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+        function toggleTheme() {
+            document.body.classList.toggle("dark-mode");
+        }
+    </script>
 </body>
 
 </html>
