--- a/index.html
+++ b/index.html
@@ -25,19 +25,25 @@
         </nav>
     </header>
 
-    <section id="Home" data-aos="fade-up">
-        <h2>KITANATION 3D</h2>
-        <p>Kitanation 3D adalah layanan cetak 3D profesional yang menghadirkan solusi kreatif dan presisi tinggi untuk
-            kebutuhan personal maupun bisnis Anda. Kami menggunakan printer Ender-3 V3 SE untuk menghasilkan kualitas
-            cetak
-            terbaik.</p>
-        <h2>Our Service</h2>
-        <ul>
-            <li>Miniatur & Figur Custom</li>
-            <li>Aksesoris & Dekorasi Unik</li>
-            <li>Prototyping & Mockup Produk</li>
-            <li>Layanan Cetak Desain 3D Anda</li>
-        </ul>
+    <section id="Home" data-aos="fade-up"
+        style="display: flex; align-items: center; max-width: 1000px; margin: auto; padding: 60px 20px; gap: 40px;">
+        <div style="flex: 1;">
+            <img src="Image\Logo-K3D.jpg" alt="Gambar Kitanation 3D"
+                style="width: 100%; max-width: 400px; border-radius: 12px;">
+        </div>
+        <div style="flex: 1; color: white;">
+            <h2>KITANATION 3D</h2>
+            <p>Kitanation 3D adalah layanan cetak 3D profesional yang menghadirkan solusi kreatif dan presisi tinggi
+                untuk kebutuhan personal maupun bisnis Anda. Kami menggunakan printer Ender-3 V3 SE untuk menghasilkan
+                kualitas cetak terbaik.</p>
+            <h3>Our Service</h3>
+            <ul>
+                <li>Miniatur & Figur Custom</li>
+                <li>Aksesoris & Dekorasi Unik</li>
+                <li>Prototyping & Mockup Produk</li>
+                <li>Layanan Cetak Desain 3D Anda</li>
+            </ul>
+        </div>
     </section>
 
     <section id="OurMachine" class="full-width" data-aos="fade-up">
@@ -45,7 +51,11 @@
 
             <div style="flex: 1; min-width: 300px; padding: 40px; box-sizing: border-box; text-align: center;">
                 <h2 style="color: #111; margin-bottom: 10px;">Our Machine</h2>
-                <p style="color: #444; font-size: 16px;">Under maintenance</p>
+                <p style="color: #444; font-size: 16px;">Kami menggunakan printer 3D model Ender-3 V3 SE yang terkenal
+                    dengan presisi tinggi dan keandalan luar biasa. Mesin ini memungkinkan kami mencetak berbagai produk
+                    dengan detail tajam dan hasil akhir berkualitas, baik untuk prototyping, miniatur custom, hingga
+                    aksesoris unik. Dengan teknologi tercanggih, setiap ide Anda dapat diwujudkan menjadi objek nyata
+                    dengan akurasi maksimal</p>
             </div>
 
             <div style="flex: 1; min-width: 300px; text-align: center;">
