--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <a href="https://wa.me/628133889852" class="whatsapp-button" target="_blank">Chat via WhatsApp</a>
     </section>
 
-    <footer data-aos="fade-up">
+    <footer >
         <p>&copy; 2025 Kitanation 3D. All rights reserved.</p>
     </footer>
 
