--- a/index.html
+++ b/index.html
@@ -8,22 +8,60 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="icon" href="Image/Kitanation-Logo-Black.png" type="image/png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
     <!-- <button class="theme-toggle" onclick="toggleTheme()">🌓</button> -->
 
-    <header data-aos="fade-down">
-        <img src="Image\Kitanation-Logo-3D.png" alt="Logo Kitanation 3D" class="logo-header">
-        <p>Make Your Own Rotation</p>
-        <nav class="navmenu navbar-expand-sm" style="background-color: black;" data-bs-theme="dark">
-            <a href="#Home">Home</a>
-            <a href="#OurMachine">Our Machine</a>
-            <a href="#Gallery">Gallery</a>
-            <a href="#FindUs">Find Us</a>
-        </nav>
-    </header>
+    <!-- <header data-aos="fade-down">
+
+        <div class="row">
+            <div class="col">
+                <img src="Image\Kitanation-Logo-Horizontal.png" alt="Logo Kitanation 3D" class="logo-header">
+                <p>Make Your Own Rotation</p>
+            </div>
+            <div class="col m-0 p-0 d-flex justify-content-end">
+                <nav class="navmenu navbar-expand-sm" style="background-color: black;" data-bs-theme="dark">
+                    <a href="#Home">Home</a>
+                    <a href="#OurMachine">Our Machine</a>
+                    <a href="#Gallery">Gallery</a>
+                    <a href="#FindUs">Find Us</a>
+                </nav>
+            </div>
+        </div>
+
+    </header> -->
+
+    <nav class="navbar navbar-expand-lg sticky-top" data-bs-theme="dark">
+        <div class="container-fluid">
+            <div style="width: 50vw;">
+                <a class="navbar-brand" href="#"><img src="Image\Kitanation-Logo-Horizontal.png" alt="Logo Kitanation 3D" class="logo-header"></a>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon "></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#OurMachine">Our Machine</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Gallery">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#FindUs">Find Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <section id="Home" data-aos="fade-up"
         style="display: flex; align-items: center; max-width: 1000px; margin: auto; padding: 60px 20px; gap: 40px;">
@@ -76,12 +114,13 @@
     </section>
 
     <section id="FindUs" data-aos="fade-up">
-        <h2>Hubungi Kami</h2>
+        <h2>Find Us !!</h2>
         <p>Ingin konsultasi atau langsung order? Klik tombol di bawah untuk terhubung via WhatsApp:</p>
         <a href="https://wa.me/628133889852" class="whatsapp-button" target="_blank">Chat via WhatsApp</a>
+        <a href="https://shopee.co.id/shop/285828888" class="whatsapp-button" target="_blank">shopee</a>
     </section>
 
-    <footer >
+    <footer>
         <p>&copy; 2025 Kitanation 3D. All rights reserved.</p>
     </footer>
 
@@ -92,6 +131,9 @@
             document.body.classList.toggle("dark-mode");
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
