--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <nav class="navbar navbar-expand-lg sticky-top" data-bs-theme="dark">
         <div class="container-fluid">
             <div style="width: 50vw;">
-                <a class="navbar-brand" href="#"><img src="Image\Kitanation-Logo-Horizontal.png" alt="Logo Kitanation 3D" class="logo-header"></a>
+                <a class="navbar-brand" href="#"><img src="Image\Kitanation-Logo-Horizontal.png"
+                        alt="Logo Kitanation 3D" class="logo-header"></a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,24 +64,39 @@
         </div>
     </nav>
 
-    <section id="Home" data-aos="fade-up"
-        style="display: flex; align-items: center; max-width: 1000px; margin: auto; padding: 60px 20px; gap: 40px;">
-        <div style="flex: 1;">
+    <section id="Hero" class="row m-0 p-0"
+        style="display: flex; align-items: center; max-width: 100vw; height: 100vh;">
+        <div style="text-align: center;">
+            <h1>
+                KITANATION
+            </h1>
+            <p>
+                MAKE YOUR OWN ROTATION
+            </p>
+        </div>
+        
+    </section>
+
+    <section id="Home" class="full-width" data-aos="fade-up">
+        <div class="col-md">
             <img src="Image\Logo-K3D.jpg" alt="Gambar Kitanation 3D"
                 style="width: 100%; max-width: 400px; border-radius: 12px;">
         </div>
-        <div style="flex: 1; color: white;">
-            <h2>KITANATION 3D</h2>
-            <p>Kitanation 3D adalah layanan cetak 3D profesional yang menghadirkan solusi kreatif dan presisi tinggi
-                untuk kebutuhan personal maupun bisnis Anda. Kami menggunakan printer Ender-3 V3 SE untuk menghasilkan
-                kualitas cetak terbaik.</p>
-            <h3>Our Service</h3>
+        <div class="col-md" style="flex: 1; color: rgb(0, 0, 0); ">
+            <div style="flex: 1; min-width: 300px; padding: 40px; box-sizing: border-box; text-align: center;">
+                <h2 style="color: #111; margin-bottom: 10px;">KITANATION 3D</h2>
+                <p style="color: #444; font-size: 16px;">Kitanation 3D adalah layanan cetak 3D profesional yang menghadirkan solusi kreatif dan presisi tinggi
+                    untuk kebutuhan personal maupun bisnis Anda. Kami menggunakan printer Ender-3 V3 SE untuk
+                    menghasilkan
+                    kualitas cetak terbaik.</p>
+            </div>
+            <!-- <h3>Our Service</h3>
             <ul>
                 <li>Miniatur & Figur Custom</li>
                 <li>Aksesoris & Dekorasi Unik</li>
                 <li>Prototyping & Mockup Produk</li>
                 <li>Layanan Cetak Desain 3D Anda</li>
-            </ul>
+            </ul> -->
         </div>
     </section>
 
@@ -104,7 +120,7 @@
         </div>
     </section>
 
-    <section id="Gallery" data-aos="fade-up">
+    <section id="Gallery" data-aos="fade-up" style="background-color: #ffc400;">
         <h2>Galeri Hasil Cetak</h2>
         <div class="gallery">
             <img src="Image\TP_Gantungan2_1.jpg" alt="Hasil Cetak 1">
