--- a/index.html
+++ b/index.html
@@ -14,27 +14,6 @@
 </head>
 
 <body>
-    <!-- <button class="theme-toggle" onclick="toggleTheme()">🌓</button> -->
-
-    <!-- <header data-aos="fade-down">
-
-        <div class="row">
-            <div class="col">
-                <img src="Image\Kitanation-Logo-Horizontal.png" alt="Logo Kitanation 3D" class="logo-header">
-                <p>Make Your Own Rotation</p>
-            </div>
-            <div class="col m-0 p-0 d-flex justify-content-end">
-                <nav class="navmenu navbar-expand-sm" style="background-color: black;" data-bs-theme="dark">
-                    <a href="#Home">Home</a>
-                    <a href="#OurMachine">Our Machine</a>
-                    <a href="#Gallery">Gallery</a>
-                    <a href="#FindUs">Find Us</a>
-                </nav>
-            </div>
-        </div>
-
-    </header> -->
-
     <nav class="navbar navbar-expand-lg sticky-top" data-bs-theme="dark">
         <div class="container-fluid">
             <div style="width: 50vw;">
@@ -64,28 +43,32 @@
         </div>
     </nav>
 
-    <section id="Hero" class="row m-0 p-0"
-        style="display: flex; align-items: center; max-width: 100vw; height: 100vh;">
-        <div style="text-align: center;">
-            <h1>
-                KITANATION
-            </h1>
-            <p>
-                MAKE YOUR OWN ROTATION
-            </p>
+    <section id="Hero" class="row m-0 p-0" style="display: flex; align-items: center; max-width: 100vw; height: 100vh;">
+        <div style="text-align: left; width: 4vw;" class="col m-2">
+            <div class="row-auto" data-aos="fade-right">
+                <img src="Image\Kitanation-Hero1-Font-Yellow.png" alt="hero1">
+            </div>
+            <div class="row-auto" data-aos="fade-right" style="margin-top: 1%;">
+                <img src="Image\Kitanation-Hero2-Font-Yellow.png" alt="hero2">
+            </div>
+            <div class="row-auto">
+                <a href="#Home" class="Hero-button">Lets Start</a>
+                <a href="#FindUs" class="Hero-button">Find Us</a>
+            </div>  
         </div>
-        
+
     </section>
 
     <section id="Home" class="full-width" data-aos="fade-up">
         <div class="col-md">
-            <img src="Image\Logo-K3D.jpg" alt="Gambar Kitanation 3D"
+            <img src="Image\WhatsApp Image 2025-03-18 at 19.31.21_1ee3c2d7.jpg" alt="Gambar Kitanation 3D"
                 style="width: 100%; max-width: 400px; border-radius: 12px;">
         </div>
         <div class="col-md" style="flex: 1; color: rgb(0, 0, 0); ">
-            <div style="flex: 1; min-width: 300px; padding: 40px; box-sizing: border-box; text-align: center;">
+            <div style="flex: 1; min-width: 300px; padding: px; box-sizing: border-box; text-align: center;">
                 <h2 style="color: #111; margin-bottom: 10px;">KITANATION 3D</h2>
-                <p style="color: #444; font-size: 16px;">Kitanation 3D adalah layanan cetak 3D profesional yang menghadirkan solusi kreatif dan presisi tinggi
+                <p style="color: #444; font-size: 16px;">Kitanation 3D adalah layanan cetak 3D profesional yang
+                    menghadirkan solusi kreatif dan presisi tinggi
                     untuk kebutuhan personal maupun bisnis Anda. Kami menggunakan printer Ender-3 V3 SE untuk
                     menghasilkan
                     kualitas cetak terbaik.</p>
