--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
 
     <section id="Hero" class="row m-0 p-0" style="display: flex; align-items: center; max-width: 100vw; height: 100vh;">
-        <div style="text-align: left; width: 4vw;" class="col m-2">
+        <div style="text-align: left;" class="col m-2">
             <div class="row-auto" data-aos="fade-right">
                 <img src="Image\Kitanation-Hero1-Font-Yellow.png" alt="hero1">
             </div>
