--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <section id="Hero" class="row m-0 p-0" style="display: flex; align-items: center; max-width: 100vw; height: 100vh;">
         <div style="text-align: left;" class="col m-2">
             <div class="row-auto" data-aos="fade-right">
-                <img src="Image\Kitanation-Hero1-Font-Yellow.png" alt="hero1">
+                <img src="Image\Kitanation-Hero1-Font-Yellow.png" alt="hero1" style="height: 6vw;">
             </div>
             <div class="row-auto" data-aos="fade-right" style="margin-top: 1%;">
-                <img src="Image\Kitanation-Hero2-Font-Yellow.png" alt="hero2">
+                <img src="Image\Kitanation-Hero2-Font-Yellow.png" alt="hero2" style="height: 3vw;">
             </div>
             <div class="row-auto">
                 <a href="#Home" class="Hero-button">Lets Start</a>
