--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
 
 </head>
 
@@ -50,14 +53,13 @@
         </div>
     </nav>
 
-    <section id="Hero" class="row m-0 p-0"
-        style="display: flex; align-items: center; max-width: 100vw; height: 100vh;;">
-        <div style="font-family: 'Bebas Neue'; text-align: center;">
-            <img src="Image/Kitanation-Machine-Glitch.gif" alt="" style="width: 20%; align-content: center;"
+    <section id="Hero" class="row m-0 p-0" style="display: flex; align-items: center; max-width: 100vw; height: 100vh;">
+        <div style="font-family: 'Staatliches' ; text-align: center;">
+            <img src="Image/Kitanation-Machine-Glitch.gif" alt="" style="width: 200px; align-content: center;"
                 data-aos="fade-down">
-            <p style="font-size: 4vw;  flex: 1;" data-aos="fade-up">CETAK IDE 3D KAMU SEKARANG</p>
-            <p style="font-size: 2vw;  flex: 1;" data-aos="fade-up">Cetak desain, miniatur, atau prototipe idemu jadi
-                nyata <br> Cepat, presisi, dan hasil yang bikin puas</p>
+            <p style="font-size: 30px;  flex: 1;" data-aos="fade-up">JASA 3D Print Cikarang</p>
+            <p style="font-size: 15px;  flex: 1;" data-aos="fade-up">Cetak ide kamu sekarang!! <br> mulai dari desain,
+                miniatur, atau prototipe <br> yang pasti Cepat, presisi, dan hasil yang mantap</p>
             <a href="#Services" class="Hero-button">Lets Start</a>
             <a href="#FindUs" class="Hero-button">Find Us</a>
         </div>
@@ -75,12 +77,12 @@
                 <svg style="margin-bottom: 10px;" xmlns="http://www.w3.org/2000/svg" width="64" height="64"
                     viewBox="0 0 64 64">
                     <path fill="currentColor"
-                        d="M61.287 53.542c-2.649-2.041-9.702-7.678-16.271-14.452c-4.366-4.505-6.223-9.015-9.533-12.429c-2.998-3.092-5.725-4.894-5.725-4.894l-.768.792l-5.188-5.35l2.004-2.067a.91.91 0 0 0 0-1.262l-.414-.427c.002-.002 5.898-7.936 13.353-5.742c.866.257 1.638.694 1.857.471c.298-.306-.837-1.482-1.502-2.162c-9.431-9.65-19.834 1.104-19.839 1.109l-.367-.379a.846.846 0 0 0-1.222 0l-9.239 9.528a.91.91 0 0 0 0 1.262s1.131 1.979-1.835 2.335c-1.194.145-1.942.414-2.366.769a431 431 0 0 0-1.979 2.009a.91.91 0 0 0 0 1.262l6.914 7.132a.847.847 0 0 0 1.223 0s1.906-1.99 1.947-2.042c.343-.438.605-1.208.743-2.44c.348-3.06 2.264-1.892 2.264-1.892a.846.846 0 0 0 1.224 0l2.004-2.067l5.186 5.349l-.768.793s1.748 2.813 4.746 5.905c3.309 3.413 7.683 5.328 12.05 9.833c6.567 6.774 12.032 14.047 14.014 16.78c.748 1.029.867.934 1.78-.009l2.849-2.938l2.847-2.937c.915-.946 1.009-1.068.011-1.84" />
+                        d="M62 32.15c0-2.852-.239-6.468-1.421-9.975c2.317-4.364 1.584-18.64-.675-19.975C57.829.972 48.393 5.6 44.2 9.734a37 37 0 0 0-4.927-.314a37 37 0 0 0-4.87.307c-4.207-4.024-13.723-8.691-15.671-7.54c-2.38 1.409-3.09 15.251-.725 19.882c-1.213 3.54-1.458 7.201-1.458 10.081c0 1.313 1.556 3.711 4.192 6.147l-.013-.012c-.557.564-3.272 3.702-1.785 10.008a8.4 8.4 0 0 1-1.931-.117c-1.328-.244-2.639-.828-3.893-1.738c-1.105-.803-2.153-1.826-3.204-3.129c-.445-.564-.919-1.182-1.338-1.85a22 22 0 0 1-1.104-1.963c-.714-1.444-1.154-2.792-1.306-4.005a6.2 6.2 0 0 1 .021-1.832c.094-.543.282-1.021.546-1.383q.381-.526.932-.705c.307-.102.647-.111.985-.031c.77.176 1.554.838 2.1 1.773c.546.924.918 2.141 1.079 3.52a2.8 2.8 0 0 0 1.073 1.886a2.97 2.97 0 0 0 2.135.607q.325-.032.633-.133c1.287-.422 2.08-1.634 1.929-2.942a4 4 0 0 0-.043-.264l-.006-.031c-.473-2.146-1.233-3.92-2.329-5.424c-.695-.943-1.497-1.725-2.385-2.324c-1.044-.707-2.226-1.16-3.411-1.307c-1.299-.168-2.668.055-3.801.621a6.3 6.3 0 0 0-2.674 2.523c-.53.926-.843 1.98-.929 3.133a10 10 0 0 0 .242 2.936c.372 1.629 1.046 3.204 2.123 4.96c.43.695.915 1.396 1.483 2.141l.206.268c.442.572.9 1.164 1.398 1.727c1.281 1.469 2.568 2.623 3.931 3.531c1.636 1.094 3.421 1.803 5.165 2.049c1.011.151 2.068.136 3.13-.006a28 28 0 0 0 1.127 2.607c.68 1.378 3.219 2.639 5.723 3.189c.412 1.721.959 3.076 1.694 3.8c.337.332.805.608 1.347.841l-.018.03l.979.322l.002-.009a12.2 12.2 0 0 0 2.56.408l-.003.028h1.033l-.001-.006c1.02-.015 2.021-.136 2.895-.378l.003.019l.975-.332l-.021-.033c.52-.231.965-.512 1.279-.857c.314.346.76.626 1.279.857l-.021.033l.975.332l.003-.019c.872.242 1.874.363 2.893.378l-.001.006h1.033l-.004-.026a12.2 12.2 0 0 0 2.563-.409l.001.01l.977-.322l-.017-.03c.541-.231 1.01-.509 1.347-.841c.734-.724 1.281-2.079 1.694-3.8c2.503-.55 5.043-1.812 5.724-3.189c4.798-9.721.808-14.387.099-15.106C60.449 35.853 62 33.46 62 32.15M56.17 8.824c.544.321 1.111 4.099 1.044 7.279c-1.719-2.018-4.049-3.748-7.186-4.943c2.551-1.507 5.589-2.663 6.142-2.336m-6.676 14.378c-.423.47-.76 1.619-.76 3.45c0 4.926 2.436 4.926 2.436 0c0-2.114-.448-3.315-.961-3.615c4.062-.731 6.236 2.563 6.236 2.563s-.188 4.262-4.594 5.406c-4.408 1.145-6.77-2.457-6.77-2.457s.191-4.13 4.413-5.347m-16.027 5.347s-2.362 3.602-6.77 2.457c-4.406-1.145-4.594-5.406-4.594-5.406s2.175-3.295 6.236-2.563c-.512.3-.96 1.501-.96 3.615c0 4.926 2.434 4.926 2.434 0c0-1.831-.336-2.98-.759-3.45c4.222 1.217 4.413 5.347 4.413 5.347M22.466 8.813c.5-.296 3.51.864 6.061 2.345c-3.111 1.186-5.432 2.896-7.146 4.891c-.083-3.171.493-6.887 1.085-7.236m1.226 45.48c.061-.657.992-.378 2.414-.014q.16 1.032.363 1.951c-1.71-.463-2.843-1.201-2.777-1.937m6.127 6.533c-.731-.329-1.188-.745-1.188-1.205c0-.618.804-.48 2.03-.262zm3.369.683c-.964-.043-1.84-.18-2.564-.391l.263-1.719c.743.131 1.632.267 2.585.295zm.881.012l-.285-1.813l.011.001c1.077 0 2.077-.163 2.904-.31l.263 1.72c-.809.235-1.801.38-2.893.402m3.667-.679l-.89-1.468c1.275-.228 2.112-.385 2.112.247c.001.467-.47.889-1.222 1.221m1.537-5.963l-4.429-9.307l-.008-.002a23.5 23.5 0 0 0 4.437.433c1.517 0 2.997-.156 4.431-.432zm1.539 5.963c-.752-.331-1.224-.754-1.224-1.221c0-.632.837-.475 2.111-.247zm3.666.679c-1.092-.021-2.084-.167-2.892-.4l.261-1.721c.828.146 1.828.31 2.907.31h.007zm.88-.012l-.285-1.814c.955-.028 1.844-.164 2.588-.295l.265 1.719c-.727.21-1.603.348-2.568.39m3.371-.682l-.841-1.468c1.227-.219 2.03-.356 2.03.262c0 .46-.458.876-1.189 1.206m3.349-4.597c.136-.611.257-1.265.362-1.951c1.424-.364 2.356-.644 2.415.014c.068.736-1.065 1.474-2.777 1.937M39.273 45.218c-9.209 0-18.13-7.62-18.131-7.62c0 0 8.36-2.701 11.497-5.084c1.979-1.504 4.169-6.486 6.634-6.486s4.654 4.982 6.635 6.486c3.137 2.383 11.498 5.084 11.498 5.084s-8.922 7.62-18.133 7.62" />
                     <path fill="currentColor"
-                        d="M34.008 22.689a53 53 0 0 1 2.497 2.408c1.592 1.642 2.924 3.479 4.259 5.44l8.942-8.943A9.938 9.938 0 0 0 61.72 9.584L53.604 17.7l-5.76-1.543l-1.544-5.763l8.114-8.111a9.92 9.92 0 0 0-9.381 2.63a9.93 9.93 0 0 0-2.631 9.38zm-7.519 12.74a54 54 0 0 1-2.479-2.743l-9.717 9.718a9.93 9.93 0 0 0-9.381 2.629c-3.883 3.88-3.882 10.174 0 14.055a9.934 9.934 0 0 0 14.054 0a9.94 9.94 0 0 0 2.631-9.384l10.004-10.003c-1.84-1.338-3.567-2.679-5.112-4.272M13.483 57.821l-5.761-1.544l-1.543-5.762l4.218-4.215l5.76 1.541l1.543 5.763z" />
+                        d="M43.33 39.894c-.826-.059-1.607-.318-2.236-.814c-.627-.477-1.09-1.159-1.225-1.911l-.044-.247c.449-.111.947-.362 1.464-.86c1.172-1.127 1.514-2.436 1.07-2.965c-.617-.738-2.518-.795-3.086-.795c-.566 0-2.469.057-3.088.795c-.439.529-.098 1.838 1.074 2.965c.517.498 1.015.749 1.462.86l-.044.247c-.137.75-.596 1.435-1.227 1.911c-.613.494-1.436.754-2.215.813c-.863.039-1.672-.139-2.416-.582a3.8 3.8 0 0 1-1.663-2.021c.044.953.567 1.88 1.317 2.519c.744.639 1.764 1.016 2.723 1.057a4.74 4.74 0 0 0 2.922-.822a4.3 4.3 0 0 0 1.154-1.203c.311.477.703.889 1.156 1.201a4.74 4.74 0 0 0 2.9.824a4.6 4.6 0 0 0 2.742-1.057c.75-.641 1.273-1.565 1.318-2.519a3.8 3.8 0 0 1-1.662 2.021c-.73.442-1.578.622-2.396.583" />
                 </svg>
                 <h3 style="margin-top: 10px;">Miniatur & Figur Custom</h3>
-                <p style="font-size: 14px;">Karakter favoritmu atau ide original? Bisa kami cetak jadi nyata!</p>
+                <p style="font-size: 14px;">Karakter favoritmu atau ide original? Bisa kami cetak jadi real!</p>
             </div>
 
             <div data-aos="fade-up"
@@ -98,12 +100,13 @@
 
             <div data-aos="fade-up"
                 style="background: #fff; color: #000; flex: 1 1 200px; padding: 30px 20px; border-radius: 16px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s;">
+
                 <svg style="margin-bottom: 10px;" xmlns="http://www.w3.org/2000/svg" width="64" height="64"
                     viewBox="0 0 64 64">
                     <path fill="currentColor"
-                        d="M62 32.15c0-2.852-.239-6.468-1.421-9.975c2.317-4.364 1.584-18.64-.675-19.975C57.829.972 48.393 5.6 44.2 9.734a37 37 0 0 0-4.927-.314a37 37 0 0 0-4.87.307c-4.207-4.024-13.723-8.691-15.671-7.54c-2.38 1.409-3.09 15.251-.725 19.882c-1.213 3.54-1.458 7.201-1.458 10.081c0 1.313 1.556 3.711 4.192 6.147l-.013-.012c-.557.564-3.272 3.702-1.785 10.008a8.4 8.4 0 0 1-1.931-.117c-1.328-.244-2.639-.828-3.893-1.738c-1.105-.803-2.153-1.826-3.204-3.129c-.445-.564-.919-1.182-1.338-1.85a22 22 0 0 1-1.104-1.963c-.714-1.444-1.154-2.792-1.306-4.005a6.2 6.2 0 0 1 .021-1.832c.094-.543.282-1.021.546-1.383q.381-.526.932-.705c.307-.102.647-.111.985-.031c.77.176 1.554.838 2.1 1.773c.546.924.918 2.141 1.079 3.52a2.8 2.8 0 0 0 1.073 1.886a2.97 2.97 0 0 0 2.135.607q.325-.032.633-.133c1.287-.422 2.08-1.634 1.929-2.942a4 4 0 0 0-.043-.264l-.006-.031c-.473-2.146-1.233-3.92-2.329-5.424c-.695-.943-1.497-1.725-2.385-2.324c-1.044-.707-2.226-1.16-3.411-1.307c-1.299-.168-2.668.055-3.801.621a6.3 6.3 0 0 0-2.674 2.523c-.53.926-.843 1.98-.929 3.133a10 10 0 0 0 .242 2.936c.372 1.629 1.046 3.204 2.123 4.96c.43.695.915 1.396 1.483 2.141l.206.268c.442.572.9 1.164 1.398 1.727c1.281 1.469 2.568 2.623 3.931 3.531c1.636 1.094 3.421 1.803 5.165 2.049c1.011.151 2.068.136 3.13-.006a28 28 0 0 0 1.127 2.607c.68 1.378 3.219 2.639 5.723 3.189c.412 1.721.959 3.076 1.694 3.8c.337.332.805.608 1.347.841l-.018.03l.979.322l.002-.009a12.2 12.2 0 0 0 2.56.408l-.003.028h1.033l-.001-.006c1.02-.015 2.021-.136 2.895-.378l.003.019l.975-.332l-.021-.033c.52-.231.965-.512 1.279-.857c.314.346.76.626 1.279.857l-.021.033l.975.332l.003-.019c.872.242 1.874.363 2.893.378l-.001.006h1.033l-.004-.026a12.2 12.2 0 0 0 2.563-.409l.001.01l.977-.322l-.017-.03c.541-.231 1.01-.509 1.347-.841c.734-.724 1.281-2.079 1.694-3.8c2.503-.55 5.043-1.812 5.724-3.189c4.798-9.721.808-14.387.099-15.106C60.449 35.853 62 33.46 62 32.15M56.17 8.824c.544.321 1.111 4.099 1.044 7.279c-1.719-2.018-4.049-3.748-7.186-4.943c2.551-1.507 5.589-2.663 6.142-2.336m-6.676 14.378c-.423.47-.76 1.619-.76 3.45c0 4.926 2.436 4.926 2.436 0c0-2.114-.448-3.315-.961-3.615c4.062-.731 6.236 2.563 6.236 2.563s-.188 4.262-4.594 5.406c-4.408 1.145-6.77-2.457-6.77-2.457s.191-4.13 4.413-5.347m-16.027 5.347s-2.362 3.602-6.77 2.457c-4.406-1.145-4.594-5.406-4.594-5.406s2.175-3.295 6.236-2.563c-.512.3-.96 1.501-.96 3.615c0 4.926 2.434 4.926 2.434 0c0-1.831-.336-2.98-.759-3.45c4.222 1.217 4.413 5.347 4.413 5.347M22.466 8.813c.5-.296 3.51.864 6.061 2.345c-3.111 1.186-5.432 2.896-7.146 4.891c-.083-3.171.493-6.887 1.085-7.236m1.226 45.48c.061-.657.992-.378 2.414-.014q.16 1.032.363 1.951c-1.71-.463-2.843-1.201-2.777-1.937m6.127 6.533c-.731-.329-1.188-.745-1.188-1.205c0-.618.804-.48 2.03-.262zm3.369.683c-.964-.043-1.84-.18-2.564-.391l.263-1.719c.743.131 1.632.267 2.585.295zm.881.012l-.285-1.813l.011.001c1.077 0 2.077-.163 2.904-.31l.263 1.72c-.809.235-1.801.38-2.893.402m3.667-.679l-.89-1.468c1.275-.228 2.112-.385 2.112.247c.001.467-.47.889-1.222 1.221m1.537-5.963l-4.429-9.307l-.008-.002a23.5 23.5 0 0 0 4.437.433c1.517 0 2.997-.156 4.431-.432zm1.539 5.963c-.752-.331-1.224-.754-1.224-1.221c0-.632.837-.475 2.111-.247zm3.666.679c-1.092-.021-2.084-.167-2.892-.4l.261-1.721c.828.146 1.828.31 2.907.31h.007zm.88-.012l-.285-1.814c.955-.028 1.844-.164 2.588-.295l.265 1.719c-.727.21-1.603.348-2.568.39m3.371-.682l-.841-1.468c1.227-.219 2.03-.356 2.03.262c0 .46-.458.876-1.189 1.206m3.349-4.597c.136-.611.257-1.265.362-1.951c1.424-.364 2.356-.644 2.415.014c.068.736-1.065 1.474-2.777 1.937M39.273 45.218c-9.209 0-18.13-7.62-18.131-7.62c0 0 8.36-2.701 11.497-5.084c1.979-1.504 4.169-6.486 6.634-6.486s4.654 4.982 6.635 6.486c3.137 2.383 11.498 5.084 11.498 5.084s-8.922 7.62-18.133 7.62" />
+                        d="M61.287 53.542c-2.649-2.041-9.702-7.678-16.271-14.452c-4.366-4.505-6.223-9.015-9.533-12.429c-2.998-3.092-5.725-4.894-5.725-4.894l-.768.792l-5.188-5.35l2.004-2.067a.91.91 0 0 0 0-1.262l-.414-.427c.002-.002 5.898-7.936 13.353-5.742c.866.257 1.638.694 1.857.471c.298-.306-.837-1.482-1.502-2.162c-9.431-9.65-19.834 1.104-19.839 1.109l-.367-.379a.846.846 0 0 0-1.222 0l-9.239 9.528a.91.91 0 0 0 0 1.262s1.131 1.979-1.835 2.335c-1.194.145-1.942.414-2.366.769a431 431 0 0 0-1.979 2.009a.91.91 0 0 0 0 1.262l6.914 7.132a.847.847 0 0 0 1.223 0s1.906-1.99 1.947-2.042c.343-.438.605-1.208.743-2.44c.348-3.06 2.264-1.892 2.264-1.892a.846.846 0 0 0 1.224 0l2.004-2.067l5.186 5.349l-.768.793s1.748 2.813 4.746 5.905c3.309 3.413 7.683 5.328 12.05 9.833c6.567 6.774 12.032 14.047 14.014 16.78c.748 1.029.867.934 1.78-.009l2.849-2.938l2.847-2.937c.915-.946 1.009-1.068.011-1.84" />
                     <path fill="currentColor"
-                        d="M43.33 39.894c-.826-.059-1.607-.318-2.236-.814c-.627-.477-1.09-1.159-1.225-1.911l-.044-.247c.449-.111.947-.362 1.464-.86c1.172-1.127 1.514-2.436 1.07-2.965c-.617-.738-2.518-.795-3.086-.795c-.566 0-2.469.057-3.088.795c-.439.529-.098 1.838 1.074 2.965c.517.498 1.015.749 1.462.86l-.044.247c-.137.75-.596 1.435-1.227 1.911c-.613.494-1.436.754-2.215.813c-.863.039-1.672-.139-2.416-.582a3.8 3.8 0 0 1-1.663-2.021c.044.953.567 1.88 1.317 2.519c.744.639 1.764 1.016 2.723 1.057a4.74 4.74 0 0 0 2.922-.822a4.3 4.3 0 0 0 1.154-1.203c.311.477.703.889 1.156 1.201a4.74 4.74 0 0 0 2.9.824a4.6 4.6 0 0 0 2.742-1.057c.75-.641 1.273-1.565 1.318-2.519a3.8 3.8 0 0 1-1.662 2.021c-.73.442-1.578.622-2.396.583" />
+                        d="M34.008 22.689a53 53 0 0 1 2.497 2.408c1.592 1.642 2.924 3.479 4.259 5.44l8.942-8.943A9.938 9.938 0 0 0 61.72 9.584L53.604 17.7l-5.76-1.543l-1.544-5.763l8.114-8.111a9.92 9.92 0 0 0-9.381 2.63a9.93 9.93 0 0 0-2.631 9.38zm-7.519 12.74a54 54 0 0 1-2.479-2.743l-9.717 9.718a9.93 9.93 0 0 0-9.381 2.629c-3.883 3.88-3.882 10.174 0 14.055a9.934 9.934 0 0 0 14.054 0a9.94 9.94 0 0 0 2.631-9.384l10.004-10.003c-1.84-1.338-3.567-2.679-5.112-4.272M13.483 57.821l-5.761-1.544l-1.543-5.762l4.218-4.215l5.76 1.541l1.543 5.763z" />
                 </svg>
                 <h3 style="margin-top: 10px;">Prototyping Produk</h3>
                 <p style="font-size: 14px;">Butuh mockup produk? Kami bantu realisasikan konsepmu secepat kilat.</p>
@@ -126,7 +129,7 @@
 
     <section id="Gallery" class="gallery-section">
         <div data-aos="fade-down">
-            <h2 class="section-title">Galeri Karya Kami</h2>
+            <h2 class="section-title">KATALOG</h2>
             <p class="section-subtitle">Intip hasil cetak 3D kami — dari desain unik hingga detail yang presisi.</p>
         </div>
         <div class="gallery-grid col-md" data-aos="fade-up">
@@ -152,7 +155,6 @@
     <section id="OurMachine" class="full-width" style="background-color: #000; font-family: 'Bebas Neue';">
         <div
             style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 60px 20px; gap: 40px;">
-
             <!-- Gambar Mesin -->
             <div style="flex: 1; min-width: 300px; text-align: center;" data-aos="zoom-in">
                 <img loading="lazy" src="Image/Kitanation-Machine-Real.jpg" alt="3D Printer Ender-3 V3 SE"
@@ -198,7 +200,7 @@
         <div style="max-width: 1000px; margin: auto;">
             <h2 style="text-align: center; margin-bottom: 20px;">📍 Find Us</h2>
             <p style="text-align: center; font-size: 16px; margin-bottom: 40px;">
-                Konsultasi, diskusi ide <strong>GRATIS</strong> cukup dari rumah, tanpa perlu datang ke tempat.
+                Konsultasi, diskusi ide <strong>GRATIS</strong> cukup online dari mana saja.
             </p>
 
             <!-- Info Kontak -->
@@ -209,7 +211,8 @@
                     <h3>📞 Contact</h3>
                     <p><strong>WhatsApp:</strong> <a href="https://wa.me/628133889852" style="color: #ffc400;">+62
                             813-3889-852</a></p>
-                    <p><strong>Instagram:</strong> <a href="https://www.instagram.com/kitanation3d?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                    <p><strong>Instagram:</strong> <a
+                            href="https://www.instagram.com/kitanation3d?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                             style="color: #ffc400;">@kitanation3d</a></p>
                     <p><strong>Jam Layanan:</strong><br>Senin – Sabtu: 09.00 – 17.00</p>
                 </div>
