--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
                 <img loading="lazy" src="Image/Kitanation-GantunganTempel-Grey.jpg" alt="Hasil Cetak 4">
                 <p style="font-family: 'Bebas Neue';">Gantungan Dinding</p>
             </div>
+            <div class="gallery-item">
+                <img loading="lazy" src="Image/Kitanation-TungTungSahur-Grey.jpg" alt="Hasil Cetak 4">
+                <p style="font-family: 'Bebas Neue';">Miniatur TungTung Sahur</p>
+            </div>
         </div>
     </section>
 
@@ -157,39 +161,39 @@
             style="display: flex; flex-wrap: wrap; align-items: center; justify-content: center; padding: 60px 20px; gap: 40px;">
             <!-- Gambar Mesin -->
             <div style="flex: 1; min-width: 300px; text-align: center;" data-aos="zoom-in">
-                <img loading="lazy" src="Image/Kitanation-Machine-Real.jpg" alt="3D Printer Ender-3 V3 SE"
+                <img loading="lazy" src="Image/Kitanation-Machine-Real3.jpg" alt="3D Printer Ender-3 V3 SE"
                     style="width: 100%; max-width: 480px; border-radius: 16px; box-shadow: 0 10px 30px rgba(255, 187, 0, 0.781);">
             </div>
 
             <!-- Deskripsi Mesin -->
-            <div style="flex: 1; min-width: 300px; padding: 20px;" data-aos="fade-left">
-                <h2 style="color: #ffc400; font-size: 4vw; margin-bottom: 10px;">⚙️ Meet Our Powerhouse</h2>
-                <p style="color: #ffc400; font-size: 2vw; line-height: 1.7;">
+            <div style="flex: 1; min-width: 300px; padding: 20px; font-family: 'Staatliches';" data-aos="fade-left">
+                <h2 style="color: #ffc400; font-size: 35px; margin-bottom: 10px;">⚙️ Meet Our Powerhouse</h2>
+                <p style="color: #ffc400; font-size: 25px; line-height: 1.7;">
                     Bukan printer sembarangan. Kami pakai <strong>Ender-3 V3 SE</strong>, mesin cetak 3D yang jadi
                     favorit para kreator di seluruh dunia.
                     Dengan kecepatan tinggi dan presisi mikron, apapun bentuk idemu — bisa langsung jadi nyata!
                 </p>
 
-                <div style="margin-top: 2px;">
+                <div style="margin-top: 2px; font-family: 'Staatliches'">
                     <div style="margin-bottom: 10px; display: flex; align-items: center;">
-                        <span style="font-size: 2vw; margin-right: 10px;">🔩</span>
+                        <span style="font-size: 20px; margin-right: 10px;">🔩</span>
                         <span>Auto Bed Leveling — hasil cetak selalu rapi & rata</span>
                     </div>
                     <div style="margin-bottom: 10px; display: flex; align-items: center;">
-                        <span style="font-size: 2vw; margin-right: 10px;">⚡</span>
+                        <span style="font-size: 20px; margin-right: 10px;">⚡</span>
                         <span>High-Speed Printing — hemat waktu tanpa kompromi</span>
                     </div>
                     <div style="margin-bottom: 10px; display: flex; align-items: center;">
-                        <span style="font-size: 2vw; margin-right: 10px;">🎯</span>
+                        <span style="font-size: 20px; margin-right: 10px;">🎯</span>
                         <span>Detail Presisi — cocok untuk figur, aksesori, hingga prototipe</span>
                     </div>
                     <div style="margin-bottom: 10px; display: flex; align-items: center;">
-                        <span style="font-size: 2vw; margin-right: 10px;">🚀</span>
+                        <span style="font-size: 20px; margin-right: 10px;">🚀</span>
                         <span>Reliable & Ready — buat cetak nonstop tanpa drama</span>
                     </div>
                 </div>
 
-                <p style="margin-top: 20px; color: #ffc400; font-weight: bold;">💡 Dengan alat sehebat ini, kamu bebas
+                <p style="margin-top: 20px; color: #ffc400; font-family: 'Staatliches'; font-size: 25px;">💡 Dengan alat sehebat ini, kamu bebas
                     berkreasi tanpa batas.</p>
             </div>
         </div>
