--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </section>
 
 
-    <section id="FindUs" style="background: #000000; color: white; padding: 60px 20px;">
+    <section id="FindUs" style="background: #000000; color: white; padding: 60px 20px; font-family: 'Staatliches'">
         <div style="max-width: 1000px; margin: auto;">
             <h2 style="text-align: center; margin-bottom: 20px;">📍 Find Us</h2>
             <p style="text-align: center; font-size: 16px; margin-bottom: 40px;">
